package com.SocialMediaPlatform.Controller;

public class PostController {

}
