@startuml

class PostService {
    + createPost(post: PostDto): boolean
    + updatePost(post: PostDto): boolean
    + deletePost(post: PostDto): boolean
}

class PostController {
    + createPost(post: PostDto)
    + deletePost(post: PostDto)
    + editPost(post: PostDto)
}

class PostDto {
    -content: String
    -mediaURL: String
}


PostDto ..> PostController: sent to
PostController ..> PostService: calls
PostService ..> PostRepository: uses


@enduml